# stretto

./: .gitignore  .gitmodules  LICENSE  README.md  pyproject.toml  requirements.txt  setup.py
demos/: animals.py  artwork.py  biodex.py  emails.py  medical.py  movie.py  real_estate.py  rotowire.py
reasondb/: executor.py
reasondb/backends/: audio_model.py  audio_qa.py  backend.py  image_qa.py  image_qa_server.py  image_similarity.py  image_similarity_server.py  kv_cache_audio_qa_server.py  kv_cache_base.py  kv_cache_image_qa_server.py  kv_cache_text_qa_server.py  python_codegen.py  text_qa.py  vision_model.py
reasondb/database/: database.py  external_table.py  indentifier.py  intermediate_state.py  metadata.py  sql.py  table.py  virtual_table.py
reasondb/evaluation/: benchmark.py
reasondb/interface/: base_query_interface.py  config.py  connect.py  df.py  nl.py  sql.py
reasondb/memory_footprint/: memory_report.py
reasondb/optimizer/: base_optimizer.py  configurator.py  decision.py  dependency_graph.py  gd_optimizer.py  guarantees.py  label_optimizer.py  profiler.py  reorderer.py  sampler.py
reasondb/pipeline/: pipeline.py
reasondb/query_plan/: capabilities.py  llm_parameters.py  logical_plan.py  materialization_point.py  optimized_physical_plan.py  physical_operator.py  physical_plan.py  plan.py  query.py  tuning_parameters.py  tuning_workflow.py  unoptimized_physical_plan.py
reasondb/reasoning/: embeddings.py  llm.py  (+4 more)
scripts/: analyze.py  plot_benchmark.py  random_filter_stats.py  run_benchmark.py  run_benchmark_single_op_no_opt.py  start_servers.sh
(+97 files in other folders)
